--- a/app/07product/views/tktsale.html
+++ b/app/07product/views/tktsale.html
@@ -12,7 +12,7 @@
                 <button type="button" class="btn btn-default search" ng-click="load()">立即搜索</button>
             </div>
             <div class="col-sm-2 text-right">
-                <button type="button" class="btn btn-info new" ng-click="create()">创建商品</button>
+                <button type="button" class="btn btn-info new" ng-click="create()">创建销售品</button>
             </div>
         </div>
     </div>
@@ -38,8 +38,8 @@
         <td class="text-center">{{obj.guide_price}}</td>
         <td class="text-center">{{obj.state}}</td>
         <td class="text-center">
-          <a ng-show="obj.state=='1'" ng-click="start(obj.id)" class="btn btn-danger btn-xs">无效</a>
-          <a ng-show="obj.state=='0'" ng-click="stop(obj.id)" class="btn btn-primary btn-xs">有效</a>
+          <a ng-show="obj.state=='1'" ng-click="start(obj.id)" class="btn btn-danger btn-xs">下架</a>
+          <a ng-show="obj.state=='0'" ng-click="stop(obj.id)" class="btn btn-primary btn-xs">上架</a>
           <a ng-click="edit(obj.id)" class="btn btn-success btn-xs">编辑</a>
         </td>
       </tr>
