--- a/app/11member/views/unicomuser.html
+++ b/app/11member/views/unicomuser.html
@@ -9,7 +9,7 @@
 
                 <label>
                   <input type="checkbox" ng-model="usedate" 
-                    ng-true-value="true" ng-false-value="false"
+                    ng-true-value="1" ng-false-value="0"
                   >
                   查询时间</label>&nbsp;&nbsp;
 
