--- a/app/style/app.css
+++ b/app/style/app.css
@@ -11,6 +11,8 @@ body {
 
 .mt10{margin-top: 10px;}
 .mt15{margin-top: 15px;}
+.mt20{margin-top: 20px;}
+.mt25{margin-top: 25px;}
 .mb10{margin-bottom: 10px;}
 
 body { padding-bottom: 70px; }
@@ -290,3 +292,12 @@ fieldset[disabled] .navbar-default .btn-link:focus {
 
 
 
+.num .jian, .num .jia, .num .kuang{width: 40px; height:40px; float:left; font-size:16px; text-align:center;  }
+    
+.num .kuang{width:70px; border:none; border-top:1px solid #ccc; border-bottom:1px solid #ccc; }
+
+.num .jian, .num .jia{border:1px solid #ccc; cursor:pointer;}
+
+.num .jian{border-top-left-radius: 4px;border-bottom-left-radius: 4px;border-top-right-radius: 0px;border-bottom-right-radius: 0px;}
+
+.num .jia{border-top-right-radius: 4px;border-bottom-right-radius: 4px;border-top-left-radius: 0px;border-bottom-left-radius: 0px;}
