--- a/app/07product/views/tktsalemodel.html
+++ b/app/07product/views/tktsalemodel.html
@@ -407,20 +407,20 @@
 							<div class="form-group">
 								<label class="col-xs-2 control-label">反补</label>
 								<div class="col-xs-10">
-									<p class="form-control-static">{{saleobj.subsidy}}</p>
+									<p class="form-control-static">{{salehalfobj.subsidy}}</p>
 								</div>
 							</div>
 							<div class="form-group">
 								<label class="col-xs-2 control-label">立减</label>
 								<div class="col-xs-10">
-									<p class="form-control-static">{{saleobj.rebate}}</p>
+									<p class="form-control-static">{{salehalfobj.rebate}}</p>
 								</div>
 							</div>
 
 							<div class="form-group">
 								<label class="col-xs-2 control-label">最大购票数</label>
 								<div class="col-xs-10">
-									<p class="form-control-static">{{saleobj.max_sell}}</p>
+									<p class="form-control-static">{{salehalfobj.max_sell}}</p>
 								</div>
 							</div>
 						</div>
