--- a/app/07product/views/tkttypemodel.html
+++ b/app/07product/views/tkttypemodel.html
@@ -9,14 +9,14 @@
 		</div>
 	</div>
 
-	<div class="form-group">
+	<!--<div class="form-group">
 		<label class="col-xs-2 control-label">票种编号</label>
 		<div class="col-xs-6">
 			<input type="text" class="form-control" placeholder="请输入票种编号"
 			ng-model="objt.code"
 			>
 		</div>
-	</div>
+	</div>-->
 
 	<div class="form-group">
 		<label class="col-xs-2 control-label">所属景区</label>
