--- a/app/07product/views/tkttypeattr.html
+++ b/app/07product/views/tkttypeattr.html
@@ -5,7 +5,7 @@
   <table class="table table-bordered">
     <thead>
       <tr>
-        <th class="col-md-5 text-center">票种属性</th>
+        <th class="col-md-5 text-center">属性编号</th>
         <th class="col-md-5 text-center">属性名称</th>
         <th class="col-md-2 text-center">操作</th>
       </tr>
