--- a/app/07product/views/tkttypeattrmodel.html
+++ b/app/07product/views/tkttypeattrmodel.html
@@ -1,9 +1,9 @@
 <div class="col-xs-10 col-xs-offset-1 form-horizontal" >
 	
 	<div class="form-group">
-		<label class="col-xs-2 control-label">票种属性</label>
+		<label class="col-xs-2 control-label">属性编号</label>
 		<div class="col-xs-6">
-			<input type="text" class="form-control" placeholder="请输入票种属性"
+			<input type="text" class="form-control" placeholder="请输入属性编号"
 			ng-model="objt.type_attr"
 			>
 		</div>
