--- a/app/08view/views/viewlist.html
+++ b/app/08view/views/viewlist.html
@@ -46,7 +46,7 @@
       </td>
         <td class="text-center">
           <a ng-click="edit(obj.id)" class="btn btn-success btn-xs">编辑</a>
-          <a ng-click="type(obj.id)" class="btn btn-danger btn-xs">配置票种</a>
+          <a ng-click="type(obj.code)" class="btn btn-danger btn-xs">配置票种</a>
           <a ng-click="device(obj.id)" class="btn btn-primary btn-xs">配置设备</a>
         </td>
       </tr>
