--- a/app/08view/views/viewlist.html
+++ b/app/08view/views/viewlist.html
@@ -48,6 +48,7 @@
           <a ng-click="edit(obj.id)" class="btn btn-success btn-xs">编辑</a>
           <a ng-click="type(obj.id)" class="btn btn-danger btn-xs">配置票种</a>
           <a ng-click="device(obj.id)" class="btn btn-primary btn-xs">配置设备</a>
+          <a ng-click="createtkttype(obj.id)" class="btn btn-primary btn-xs">创建票种</a>
         </td>
       </tr>
     </tbody>
