--- a/app/07product/views/tktgoodsmodel.html
+++ b/app/07product/views/tktgoodsmodel.html
@@ -5,32 +5,16 @@
 			<button type="button" 
 				class="btn btn-xs btn-info pull-right"
 				ng-click="goodsgo()"
-				ng-show="goodsobjstate === 1"
 			>
 				<span class="glyphicon glyphicon-ok" aria-hidden="true"></span>
 			</button>
 
-			<button type="button" 
-				class="btn btn-xs btn-success pull-right"
-				ng-click="goodsedit()"
-				ng-show="goodsobjstate === 0"
-			>
-				<span class="glyphicon glyphicon-edit" aria-hidden="true"></span>
-			</button>
 		</div>
 		<div class="panel-body">
 			<div class="container-fluid">
 				<!-- 编辑状态 -->
-				<div ng-show="goodsobjstate === 1">
+				<!-- <div ng-show="goodsobjstate === 1"> -->
 					<div class="col-xs-10" >
-						<div class="form-group">
-							<label class="col-xs-2 control-label">商品编号</label>
-							<div class="col-xs-10">
-								<input type="text" class="form-control" placeholder="请输入商品编号"
-								ng-model="goodsobj.code"
-								>
-							</div>
-						</div>
 
 						<div class="form-group">
 							<label class="col-xs-2 control-label">商品名称</label>
@@ -55,7 +39,7 @@
 							<label class="col-xs-2 control-label">成本价格</label>
 							<div class="col-xs-10">
 								<div class="input-group">
-									<span class="input-group-addon">$</span>
+									<span class="input-group-addon">¥</span>
 									<input type="number" class="form-control" placeholder="请输入成本价格" min='0'
 									ng-model="goodsobj.cost_price"
 									>
@@ -75,119 +59,83 @@
 							</div>
 						</div>
 
+
 						<div class="form-group">
-							<label class="col-xs-2 control-label">商品状态</label>
-							<div class="col-xs-10">
-								<select class="form-control" ng-model="goodsobj.state" 
-					              ng-options="x.statecode as x.statename for x in statearr"
-					            >
-					            </select>
+							<label class="col-xs-2 control-label">允许消票</label>
+							<div class="col-xs-6">
+								<label class="radio-inline">
+								  <input type="radio" name="used_state" value="0"
+								  ng-model="goodsobj.state"
+								  > 下架
+								</label>
+								<label class="radio-inline">
+								  <input type="radio" name="used_state" value="1"
+								  ng-model="goodsobj.state"
+								  > 上架
+								</label>
 							</div>
 						</div>
+
 					</div>			
-				</div>
 
 
-				<!-- 展示状态 -->
-				<div ng-show="goodsobjstate === 0">
-					<div class="col-xs-10" >
-						<div class="form-group">
-							<label class="col-xs-2 control-label">商品编号</label>
-							<div class="col-xs-10">
-								<p class="form-control-static">{{goodsobj.code}}</p>
-							</div>
-						</div>
-						<div class="form-group">
-							<label class="col-xs-2 control-label">商品名称</label>
-							<div class="col-xs-10">
-								<p class="form-control-static">{{goodsobj.name}}</p>
-							</div>
-						</div>
 
-						<div class="form-group">
-							<label class="col-xs-2 control-label">所属景区</label>
-							<div class="col-xs-10">
-								<p class="form-control-static">{{goodsobj.place_code}}</p>
-							</div>
-						</div>
 
-						<div class="form-group">
-							<label class="col-xs-2 control-label">成本价格</label>
-							<div class="col-xs-10">
-								<p class="form-control-static">{{goodsobj.cost_price}}</p>
-							</div>
-						</div>
-
-						<div class="form-group">
-							<label class="col-xs-2 control-label">商品分类</label>
-							<div class="col-xs-10">
-								<p class="form-control-static">{{goodsobj.goods_category}}</p>
-							</div>
-						</div>
-
-						<div class="form-group">
-							<label class="col-xs-2 control-label">商品状态</label>
-							<div class="col-xs-10">
-								<p class="form-control-static">{{goodsobj.state}}</p>
-							</div>
-						</div>
-					</div>
-				</div>
 			</div>
 		</div>
+
+
 	</div>
 </div>
 
-<div ng-show="goodsobjdetailstate === 1">
-	<div class="col-xs-10 col-xs-offset-1" >
-		<div class="panel panel-default form-horizontal">
-			<div class="panel-heading">
-				详情信息
-			</div>
-			<div class="panel-body">
-				<div class="container-fluid">
-					<div class="col-xs-10" >
+<div class="col-xs-10 col-xs-offset-1" ng-show="goodsobj.id !== undefined">
+	<div class="panel panel-default form-horizontal">
+		<div class="panel-heading">
+			详情信息
+		</div>
+		<div class="panel-body">
+			<div class="container-fluid">
+				<div class="col-xs-10" >
 
-						<div class="form-group">
-							<label class="col-xs-2 control-label">添加票种</label>
-							<div class="col-xs-5">
+					<div class="form-group">
+						<label class="col-xs-2 control-label">添加票种</label>
+						<div class="col-xs-5">
 
-								<select class="form-control" ng-model="goodsobj.ticket_type" 
-					              ng-options="type.code as type.name for type in typearr"
-					            >
-					            </select>
-							</div>
-							<div class="col-xs-3">
-								<select class="form-control" ng-model="goodsobj.ticketattr" 
-					              ng-options="tktattr.ticket_attr_id as tktattr.type_attr_name for tktattr in tktarr"
-					            >
-					            </select>
-							</div>
-							<div class="col-xs-2">
-								<a ng-click="add()" class="btn btn-success btn-sm">添加</a>
-							</div>
+							<select class="form-control" ng-model="tkttypeobj.ticket_type" 
+				              ng-options="type.code as type.name for type in typearr"
+				            >
+				            </select>
 						</div>
-
-						<table class="table table-bordered">
-						    <thead>
-						      <tr>
-						        <th class="col-md-6 text-center">票种类型</th>
-						        <th class="col-md-4 text-center">票种属性</th>
-						        <th class="col-md-2 text-center">操作</th>
-						      </tr>
-						    </thead>
-						    <tbody>
-						      <tr ng-repeat="obj in objs">
-						        <td class="text-center">{{obj.ticket_type}}</td>
-						        <td class="text-center">{{obj.ticketattr}}</td>
-						        <td class="text-center">
-						          <a ng-click="del(obj.id)" class="btn btn-warning btn-xs">删除</a>
-						        </td>
-						      </tr>
-						    </tbody>
-						  </table>
-
+						<div class="col-xs-3">
+							<select class="form-control" ng-model="tkttypeobj.ticket_attr" 
+				              ng-options="tktattr.ticket_attr_id as tktattr.type_attr_name for tktattr in tktarr"
+				            >
+				            </select>
+						</div>
+						<div class="col-xs-2">
+							<a ng-click="add()" class="btn btn-success btn-sm">添加</a>
+						</div>
 					</div>
+
+					<table class="table table-bordered">
+					    <thead>
+					      <tr>
+					        <th class="col-md-6 text-center">票种类型</th>
+					        <th class="col-md-4 text-center">票种属性</th>
+					        <th class="col-md-2 text-center">操作</th>
+					      </tr>
+					    </thead>
+					    <tbody>
+					      <tr ng-repeat="obj in objs">
+					        <td class="text-center">{{obj.ticket_type_name}}</td>
+					        <td class="text-center">{{obj.ticket_attr_name}}</td>
+					        <td class="text-center">
+					          <a ng-click="del(obj.id)" class="btn btn-warning btn-xs">删除</a>
+					        </td>
+					      </tr>
+					    </tbody>
+					</table>
+
 				</div>
 			</div>
 		</div>
