--- a/app/07product/views/tktgoodsmodel.html
+++ b/app/07product/views/tktgoodsmodel.html
@@ -91,7 +91,7 @@
 <div class="col-xs-10 col-xs-offset-1" ng-show="goodsobj.id !== undefined">
 	<div class="panel panel-default form-horizontal">
 		<div class="panel-heading">
-			详情信息
+			商品包含票种信息
 		</div>
 		<div class="panel-body">
 			<div class="container-fluid">
