--- a/app/07product/views/tktgoods.html
+++ b/app/07product/views/tktgoods.html
@@ -36,8 +36,8 @@
         <td class="text-center">{{obj.cost_price * 0.01  | currency : '￥'}}</td>
         <td class="text-center">{{obj.state}}</td>
         <td class="text-center">
-          <a ng-show="obj.state=='1'" ng-click="start(obj.id)" class="btn btn-danger btn-xs">无效</a>
-          <a ng-show="obj.state=='0'" ng-click="stop(obj.id)" class="btn btn-primary btn-xs">有效</a>
+          <a ng-show="obj.state=='1'" ng-click="start(obj.id)" class="btn btn-danger btn-xs">停用</a>
+          <a ng-show="obj.state=='0'" ng-click="stop(obj.id)" class="btn btn-primary btn-xs">启用</a>
           <a ng-click="edit(obj.id)" class="btn btn-success btn-xs">编辑</a>
         </td>
       </tr>
