--- a/app/01ticket/views/ticketinfo.html
+++ b/app/01ticket/views/ticketinfo.html
@@ -32,7 +32,7 @@
             <td class="text-center">
                 <button type="submit" 
                 class="btn btn-default input-sm"
-                ng-click="use(obj.type,obj.usecount,obj.type_attr)"
+                ng-click="use(obj.type,obj.usecount,obj.type_attr, obj.goods_code)"
                 >消票</button>
             </td>
           </tr>
