--- a/app/07product/views/tktgoodsmodel.html
+++ b/app/07product/views/tktgoodsmodel.html
@@ -18,7 +18,13 @@
 
 						<div class="form-group">
 							<label class="col-xs-2 control-label">商品名称</label>
-							<div class="col-xs-10">
+							<div class="col-xs-2">
+								<select class="form-control" ng-model="goodsobj.attr" 
+					              ng-options="attr.ticket_attr_id as attr.type_attr_name for attr in tktarr"
+					            >
+					            </select>
+							</div>
+							<div class="col-xs-8">
 								<input type="text" class="form-control" placeholder="请输入商品名称"
 								ng-model="goodsobj.name"
 								>
@@ -47,7 +53,7 @@
 							</div>
 						</div>
 
-						<div class="form-group">
+						<!-- <div class="form-group">
 							<label class="col-xs-2 control-label">商品分类</label>
 							<div class="col-xs-10">
 								<select class="form-control" ng-model="goodsobj.goods_category	">
@@ -56,8 +62,19 @@
 									<option value="3">分类三</option>
 					            </select>
 							</div>
-						</div>
+						</div> -->
 
+						<!-- <div class="form-group">
+							<label class="col-xs-2 control-label">商品属性</label>
+							<div class="col-xs-10">
+								<div class="input-group">
+									<select class="form-control" ng-model="goodsobj.attr" 
+						              ng-options="tktattr.ticket_attr_id as tktattr.type_attr_name for tktattr in tktarr"
+						            >
+						            </select>
+								</div>
+							</div>
+						</div> -->
 
 
 					</div>			
@@ -90,12 +107,12 @@
 				            >
 				            </select>
 						</div>
-						<div class="col-xs-3">
+						<!-- <div class="col-xs-3">
 							<select class="form-control" ng-model="tkttypeobj.ticket_attr" 
 				              ng-options="tktattr.ticket_attr_id as tktattr.type_attr_name for tktattr in tktarr"
 				            >
 				            </select>
-						</div>
+						</div> -->
 						<div class="col-xs-2">
 							<a ng-click="add()" class="btn btn-success btn-sm">添加</a>
 						</div>
