--- a/app/08view/views/viewlist.html
+++ b/app/08view/views/viewlist.html
@@ -46,9 +46,8 @@
         </td>
         <td class="text-center">
           <a ng-click="edit(obj.id)" class="btn btn-success btn-xs">编辑</a>
-          <a ng-click="type(obj.code)" class="btn btn-danger btn-xs">配置票种</a>
-          <a ng-click="device(obj.id)" class="btn btn-primary btn-xs">配置设备</a>
-          <a ng-click="createtkttype(obj.id)" class="btn btn-primary btn-xs">创建票种</a>
+          <a ng-click="type(obj.code)" class="btn btn-danger btn-xs">票种管理</a>
+          <a ng-click="device(obj.code)" class="btn btn-primary btn-xs">配置设备</a>
         </td>
       </tr>
     </tbody>
