--- a/app/02device/views/list.html
+++ b/app/02device/views/list.html
@@ -1,4 +1,25 @@
 <div class="col-md-12">
+
+<div class="panel panel-default">
+    <div class="panel-body">
+        <div class="form-group form-inline">
+            <div class="col-sm-10">
+                <!-- <label>销售品名称</label>&nbsp;&nbsp;
+                <input type="text" class="form-control" ng-model="searchform.name" >
+                &nbsp;&nbsp;&nbsp;&nbsp;
+                <label>景区编号</label>&nbsp;&nbsp;
+                <input type="text" class="form-control" ng-model="searchform.place_code" >
+                &nbsp;&nbsp;&nbsp;&nbsp;
+                <button type="button" class="btn btn-default search" ng-click="load()">立即搜索</button> -->
+            </div>
+            <div class="col-sm-2 text-right">
+                <button type="button" class="btn btn-info new" ng-click="create()">创建设备</button>
+            </div>
+        </div>
+    </div>
+</div><!-- searchArea -->
+
+
 <div class="panel panel-default">
 <table class="table table-bordered table-hover">
     <thead>
