--- a/app/07product/views/tktgoods.html
+++ b/app/07product/views/tktgoods.html
@@ -18,51 +18,41 @@
     </div>
 </div><!-- searchArea -->
 
+<div class="panel panel-danger" ng-repeat="tkttype in objs track by $index" >
+  <!-- Default panel contents -->
+  <div class="panel-heading">{{tkttype.viewname}} ({{tkttype.viewcode}})</div>
 
   <table class="table table-bordered">
     <thead>
       <tr>
-        <th class="col-md-4 text-center">商品名称</th>
-        <th class="col-md-1 text-center">景区编号</th>
-        <th class="col-md-1 text-center">成本价格</th>
-        <th class="col-md-1 text-center">商品状态</th>
+        <th class="col-md-7 text-center">商品名称</th>
+        <th class="col-md-1 text-center">商品编号</th>
+        <th class="col-md-1 text-center">成本价</th>
+        <th class="col-md-1 text-center">票种状态</th>
         <th class="col-md-2 text-center">操作</th>
       </tr>
     </thead>
     <tbody>
-      <tr ng-repeat="obj in objs">
-        <td class="">{{obj.name}}</td>
-        <td class="text-center">{{obj.place_code}}</td>
-        <td class="text-center">{{obj.cost_price * 0.01  | currency : '￥'}}</td>
-        <td class="text-center">{{obj.state}}</td>
+      <tr ng-repeat="obj in tkttype.ticketarr">
+        <td class="">[{{obj.type_attr_name}}] {{obj.name}}</td>
+        <td class="text-center">{{obj.code}}</td>
+        <td class="text-center">{{obj.cost_price * 0.01 | currency : '￥'}}</td>
+        <td class="text-center">{{obj.state_name}}</td>
         <td class="text-center">
-          <a ng-show="obj.state=='1'" ng-click="start(obj.id)" class="btn btn-danger btn-xs">停用</a>
-          <a ng-show="obj.state=='0'" ng-click="stop(obj.id)" class="btn btn-primary btn-xs">启用</a>
+          <a ng-show="obj.state=='1'" ng-click="stop(obj.id)" class="btn btn-primary btn-xs">下架</a>
+          <a ng-show="obj.state=='0' || obj.state=='2'" ng-click="start(obj.id)" class="btn btn-danger btn-xs">上架</a>
           <a ng-click="edit(obj.id)" class="btn btn-success btn-xs">编辑</a>
+          <a ng-show="obj.used_state=='1'" ng-click="usedstart(obj.id)" class="btn btn-primary btn-xs">允许消票</a>
+          <a ng-show="obj.used_state=='0'" ng-click="usedstop(obj.id)" class="btn btn-danger btn-xs">禁止消票</a>
+          <!-- <a ng-click="auth(obj.code)" class="btn btn-warning btn-xs">消票权限</a> -->
+          <!-- <a uib-popover="{{obj.book_info}}" popover-title="预订需知" type="button" class="btn btn-default btn-xs" uib-popover="On the left">预订需知</a> -->
         </td>
       </tr>
     </tbody>
   </table>
+  
+</div>
 
-
-  <div class="text-right">
-
-    <uib-pagination 
-      total-items="bigTotalItems" 
-      ng-model="bigCurrentPage" 
-      max-size="maxSize" 
-      class="pagination-sm" 
-      boundary-links="true" 
-      ng-change="load()"
-      items-per-page="itemsPerPage"
-      previous-text="上一页"
-      next-text="下一页"
-      first-text="首页"
-      last-text="末页"
-      rotate="false">
-    </uib-pagination>
-
-  </div>
   
 
 </div>
