--- a/app/07product/views/tktsale.html
+++ b/app/07product/views/tktsale.html
@@ -19,63 +19,46 @@
 </div><!-- searchArea -->
 
 
+<div class="panel panel-danger" ng-repeat="tkttype in objs track by $index" >
+  <!-- Default panel contents -->
+  <div class="panel-heading">{{tkttype.viewname}} ({{tkttype.viewcode}})</div>
+
   <table class="table table-bordered">
     <thead>
       <tr>
         <th class="col-md-3 text-center">销售品名称</th>
-        <th class="col-md-2 text-center">编号</th>
+        <th class="col-md-1 text-center">销售品编号</th>
+        <th class="col-md-2 text-center">销售品分类</th>
+        <th class="col-md-1 text-center">销售品状态</th>
         <th class="col-md-1 text-center">市场价</th>
-        <th class="col-md-1 text-center">居游价</th>
-        <th class="col-md-1 text-center">状态</th>
-        <th class="col-md-2 text-center">排序</th>
+        <th class="col-md-1 text-center">指导价</th>
+        <th class="col-md-1 text-center">分销商成本</th>
         <th class="col-md-2 text-center">操作</th>
       </tr>
     </thead>
     <tbody>
-      <tr ng-repeat="obj in objs">
+      <tr ng-repeat="obj in tkttype.salearr">
         <td class="">{{obj.name}}</td>
         <td class="text-center">{{obj.code}}</td>
-        <td class="text-center">{{obj.market_price * 0.01  | currency : '￥'}}</td>
-        <td class="text-center">{{obj.guide_price * 0.01  | currency : '￥'}}</td>
-        <td class="text-center">{{obj.state}}</td>
-        <td class="form-horizontal ">
-          <div class="col-sm-6">
-            <input class="form-control input-sm" 
-            style="height:22px;" 
-            type="text" 
-            value="{{obj.asort}}" 
-            ng-model="obj.asort">
-          </div>
-          <a ng-click="asort(obj.id, obj.asort)" class="btn btn-info btn-xs">gogo</a>
-        </td>
+        <td class="text-center">{{obj.sale_category_name}}</td>
+        <td class="text-center">{{obj.state_name}}</td>
+        <td class="text-center">{{obj.market_price * 0.01 | currency : '￥'}}</td>
+        <td class="text-center">{{obj.guide_price * 0.01 | currency : '￥'}}</td>
+        <td class="text-center">{{obj.cost_price * 0.01 | currency : '￥'}}</td>
         <td class="text-center">
-          <a ng-show="obj.state=='1'" ng-click="stop(obj.id)" class="btn btn-danger btn-xs">下架</a>
-          <a ng-show="obj.state=='0'" ng-click="start(obj.id)" class="btn btn-primary btn-xs">上架</a>
-          <a ng-click="edit(obj.id)" class="btn btn-success btn-xs">编辑</a>
+          <a ng-show="obj.state=='1'" ng-click="stop(obj.id)" class="btn btn-primary btn-xs">下架</a>
+          <a ng-show="obj.state=='0' || obj.state=='2'" ng-click="start(obj.id)" class="btn btn-danger btn-xs">上架</a>
+          <a ng-click="edit(obj.id)" ng-show="obj.state=='0'" class="btn btn-success btn-xs">编辑</a>
+          <a ng-show="obj.used_state=='1'" ng-click="usedstart(obj.id)" class="btn btn-primary btn-xs">允许消票</a>
+          <a ng-show="obj.used_state=='0'" ng-click="usedstop(obj.id)" class="btn btn-danger btn-xs">禁止消票</a>
+          <a ng-click="auth(obj.code)" class="btn btn-warning btn-xs">消票权限</a>
+          <!-- <a uib-popover="{{obj.book_info}}" popover-title="预订需知" type="button" class="btn btn-default btn-xs" uib-popover="On the left">预订需知</a> -->
         </td>
       </tr>
     </tbody>
   </table>
-
-
-  <div class="text-right">
-
-    <uib-pagination 
-      total-items="bigTotalItems" 
-      ng-model="bigCurrentPage" 
-      max-size="maxSize" 
-      class="pagination-sm" 
-      boundary-links="true" 
-      ng-change="load()"
-      items-per-page="itemsPerPage"
-      previous-text="上一页"
-      next-text="下一页"
-      first-text="首页"
-      last-text="末页"
-      rotate="false">
-    </uib-pagination>
-
-  </div>
+  
+</div>
   
 
 </div>
