--- a/app/07product/views/tktsalemodel.html
+++ b/app/07product/views/tktsalemodel.html
@@ -32,7 +32,7 @@
 						</div>
 					</div>
 
-					<div class="form-group">
+					<!-- <div class="form-group">
 						<label class="col-xs-2 control-label">所属景区</label>
 						<div class="col-xs-10">
 							<select class="form-control" ng-model="saleobj.place_code" 
@@ -40,7 +40,7 @@
 				            >
 				            </select>
 						</div>
-					</div>
+					</div> -->
 
 					<div class="form-group">
 						<label class="col-xs-2 control-label">市场价格</label>
