--- a/app/12sale/views/sellinggroupmodel.html
+++ b/app/12sale/views/sellinggroupmodel.html
@@ -26,7 +26,7 @@
 	<div class="form-group">
 		<label class="col-xs-2 control-label">预定团票</label>
 		<div class="col-xs-5">
-			<select class="form-control" ng-model="groupobj.ticket_type" 
+			<select class="form-control" ng-model="groupobj.sale_code" 
               ng-options="sale.code as sale.name for sale in salearr"
             >
             </select>
