--- a/app/13order/views/list.html
+++ b/app/13order/views/list.html
@@ -55,14 +55,15 @@
   <table class="table table-bordered">
     <thead>
       <tr>
-        <th class="col-md-2 text-center">订单名称</th>
-        <th class="col-md-1 text-center">订单编号</th>
-        <th class="col-md-2 text-center">身份证</th>
+        <th class="col-md-3 text-center">订单名称</th>
+        <th class="col-md-2 text-center">订单编号</th>
+        <!-- <th class="col-md-2 text-center">身份证</th>
         <th class="col-md-1 text-center">姓名</th>
-        <th class="col-md-1 text-center">电话</th>
-        <th class="col-md-1 text-center">数量</th>
+        <th class="col-md-1 text-center">电话</th> -->
+        <th class="col-md-3 text-center">游客信息</th>
+        <!-- <th class="col-md-1 text-center">数量</th> -->
         <th class="col-md-2 text-center">购买时间</th>
-        <th class="col-md-1 text-center">备注</th>
+        <th class="col-md-1 text-center">分销商</th>
         <th class="col-md-1 text-center">操作</th>
       </tr>
     </thead>
@@ -70,12 +71,13 @@
       <tr ng-repeat="obj in objs">
         <td class="">{{obj.title}}</td>
         <td class="text-center">{{obj.code}}</td>
-        <td class="text-center">{{obj.cardno}}</td>
+        <!-- <td class="text-center">{{obj.cardno}}</td>
         <td class="text-center">{{obj.name}}</td>
-        <td class="text-center">{{obj.mobile}}</td>
-        <td class="text-center">{{obj.num}}</td>
+        <td class="text-center">{{obj.mobile}}</td> -->
+        <td class="text-center">[{{obj.name}}][{{obj.mobile}}][{{obj.cardno}}]</td>
+        <!-- <td class="text-center">{{obj.num}}</td> -->
         <td class="text-center">{{obj.create_time}}</td>
-        <td class="text-center">{{obj.note}}</td>
+        <td class="text-center">{{obj.company_id_name}}<br>{{obj.create_by_name}}</td>
         <th class="text-center">
           <a ng-click="ticketlist(obj.code)" class="btn btn-success btn-xs">票信息</a>
         </th>
