--- a/app/12sale/views/sellinggroupmodel.html
+++ b/app/12sale/views/sellinggroupmodel.html
@@ -9,30 +9,48 @@
 		</div>
 	</div>
 
-	<div class="form-group">
-	    <label class="col-xs-2 control-label">出游时间</label>
-	    <div class="col-xs-10">
+	<div ng-show="groupobjstate === 1">
+		<div class="form-group">
+		    <label class="col-xs-2 control-label">出游时间</label>
+		    <div class="col-xs-10">
 
-		    <p class="input-group col-xs-3 pull-left">
-	          <input type="text" class="form-control" uib-datepicker-popup="yyyy-MM-dd" ng-model="section.start.date" is-open="section.start.opened" ng-required="true" close-text="Close" readonly/>
-	          <span class="input-group-btn">
-	            <button type="button" class="btn btn-default" ng-click="open(section.start)"><i class="glyphicon glyphicon-calendar"></i></button>
-	          </span>
-	        </p>
+			    <p class="input-group col-xs-3 pull-left">
+		          <input type="text" class="form-control" uib-datepicker-popup="yyyy-MM-dd" ng-model="section.start.date" is-open="section.start.opened" ng-required="true" close-text="Close" readonly/>
+		          <span class="input-group-btn">
+		            <button type="button" class="btn btn-default" ng-click="open(section.start)"><i class="glyphicon glyphicon-calendar"></i></button>
+		          </span>
+		        </p>
 
-	    </div>
-	  </div>
+		    </div>
+		  </div>
 
-	<div class="form-group">
-		<label class="col-xs-2 control-label">预定团票</label>
-		<div class="col-xs-5">
-			<select class="form-control" ng-model="groupobj.sale_code" 
-              ng-options="sale.code as sale.name for sale in salearr"
-            >
-            </select>
+		<div class="form-group">
+			<label class="col-xs-2 control-label">预定团票</label>
+			<div class="col-xs-5">
+				<select class="form-control" ng-model="groupobj.sale_code" 
+	              ng-options="sale.code as sale.name for sale in salearr"
+	            >
+	            </select>
+			</div>
+			<div class="col-xs-1" style="margin-left:-5px;">
+				<a ng-click="detail()" class="btn btn-info btn-sm">团票简介</a>
+			</div>
 		</div>
-		<div class="col-xs-1" style="margin-left:-5px;">
-			<a ng-click="detail()" class="btn btn-info btn-sm">团票简介</a>
+	</div>
+
+	<div ng-show="groupobjstate === 0">
+		<div class="form-group">
+		    <label class="col-xs-2 control-label">出游时间</label>
+		    <div class="col-xs-10">
+				<p class="form-control-static">{{groupobj.arrival_date}}</p>
+			</div>
+		  </div>
+
+		<div class="form-group">
+			<label class="col-xs-2 control-label">预定团票</label>
+		    <div class="col-xs-10">
+				<p class="form-control-static">{{groupobj.order_name}}</p>
+			</div>
 		</div>
 	</div>
 
