--- a/app/07product/views/tktgoodsmodel.html
+++ b/app/07product/views/tktgoodsmodel.html
@@ -21,6 +21,7 @@
 							<div class="col-xs-2">
 								<select class="form-control" ng-model="goodsobj.attr" 
 					              ng-options="attr.ticket_attr_id as attr.type_attr_name for attr in tktarr"
+					              ng-disabled="goodsobj.id != ''"
 					            >
 					            </select>
 							</div>
@@ -36,6 +37,7 @@
 							<div class="col-xs-10">
 								<select class="form-control" ng-model="goodsobj.place_code" 
 					              ng-options="view.code as view.name for view in viewarr"
+					              ng-disabled="goodsobj.id != ''"
 					            >
 					            </select>
 							</div>
