--- a/app/07product/views/tktsalemodel.html
+++ b/app/07product/views/tktsalemodel.html
@@ -78,20 +78,13 @@
 						</div>
 					</div>
 
-					<div class="form-group" ng-show="saleobj.id == ''">
+					<div class="form-group" >
 						<label class="col-xs-2 control-label">销售品分类</label>
-						<div class="col-xs-10">
-							<select class="form-control" ng-model="saleobj.sale_category" 
+						<div class="col-xs-10" >
+							<select class="form-control" ng-model="saleobj.sale_category" ng-disabled="saleobj.id != ''"
 				              ng-options="type1.value as type1.label for type1 in typearr"
 				            >
 				            </select>
-						</div>
-					</div>
-
-					<div class="form-group" ng-show="saleobj.id != ''">
-						<label class="col-xs-2 control-label">销售品分类</label>
-						<div class="col-xs-10">
-							<p class="form-control-static">{{category}}</p>
 						</div>
 					</div>
 
